# Docbrain-rag-saas

./: .gitignore  AgentWorkflow.md  Plan.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/_widget_placeholder/: widget.js
backend/alembic/: env.py
backend/alembic/versions/: 3a79d096f9fd_remove_embedding_from_document.py  5d8b31599dec_initial_saas_schema.py  7017b3e86dd2_create_processing_tasks_table.py  903213e42dc2_add_account_model_and_auth.py  a56dd038fe22_migrate_switch_to_pwdlib_argon2_and_.py  a5b63a8cbcf8_create_rag_configs_table.py  c92e38363433_move_api_keys_from_chatbot_to_tenant.py  cc4f2e24776d_first_build.py  d49a287748c5_add_selected_rag_config_id_to_chatbots.py
backend/app/: llama_index_settings.py  main.py  schemas.py
backend/app/adapters/: __init__.py  base.py
backend/app/api/: __init__.py  api.py  crud.py  deps.py  routes.py
backend/app/api/endpoints/: admin.py  auth.py  chatbots.py  conversation.py  documents.py  health.py  rag_config.py  settings.py
backend/app/core/: chunking_strategies.py  config.py  config_validator.py  rag_config_manager.py  rag_factory.py  rag_strategies.py  security.py  strategy_factory.py
backend/app/db/: base.py  rag_factory.py  session.py  wait_for_db.py
backend/app/models/: __init__.py  account.py  base.py  chatbot.py  client.py  config_schemas.py  conversation.py  db.py  document.py  processing_task.py  rag_config.py  tenant.py
backend/app/processing/: consumer.py  processor.py  producer.py
backend/app/repositories/: account.py  auth.py  chatbot.py  conversation.py  document.py  processing_task.py  rag_config.py  tenant.py
backend/app/schemas/: __init__.py  account.py  auth.py  chat.py  chatbot.py  messages.py  rag_config.py  tenant.py
backend/app/services/: account.py  auth.py  chat.py  chatbot.py  client.py  config_manager.py  ingestion.py  rag_config_manager.py  tenant.py  vector_store.py
backend/postgresql/: init.sql
backend/tests/: conftest.py
backend/tests/api/: test_rag_config.py
backend/tests/property/: test_properties_template.py
backend/tests/unit/: test_validation.py
(+58 files in other folders)
