[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "chromadb>=1.3.5",
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "llama-cloud-services>=0.6.54",
    "llama-index>=0.14.8",
    "llama-index-core>=0.14.8",
    "llama-index-llms-openai>=0.6.9",
    "llama-index-vector-stores-postgres>=0.7.1",
    "openai>=0.29.0",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
