[project]
name = "backend"
version = "0.1.0"
description = "DocBrain SaaS Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.3",
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "llama-cloud-services>=0.6.54",
    "llama-index>=0.14.8",
    "llama-index-core>=0.14.8",
    "llama-index-llms-openai>=0.6.9",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "llama-index-vector-stores-postgres>=0.7.1",
    "openai>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "pydantic[email]>=2.12.4",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.46.0",
    "uvicorn[standard]>=0.38.0",
]
